--- a/equations.tex
+++ b/equations.tex
@@ -309,7 +309,7 @@ In case you have any ideas how to improve this guide please let us know by writi
 	\toprule
 	Symbol & Name &  Description \\
 	\midrule
-	$v_\pi(s)$ & value function & rates the value/expected return of a state following policy $\pi$, See \Cref{eq:value_function} and \Cref{eq_consistency_value_function}\\
+	$v_\pi(s)$ & value function & rates the value/expected return of a state following policy $\pi$, See \Cref{eq:value_function} and \Cref{eq:consistency_value_function}\\
 	$\pi^*$ & optimal policy & policy with the best possible expected return for all states \\
 	$v^*$ & optimal value function & value function of the optimal policy $\pi^*$\\
 	$q_\pi(s,a)$ & action-value function &  rates the value/expected return of choosing an action in a given state following policy $\pi$, See \Cref{eq:action_value_function} and \Cref{eq:consistency_action_value_function} \\
