updated description of defect behavior

--- a/equations.tex
+++ b/equations.tex
@@ -62,7 +62,7 @@ In case you have any ideas how to improve this guide please let us know by writi
 	Symbol & Name &  Description \\
 	\midrule
 	$C$ & strategy "Cooperate" & often used in standard literature to describe cooperative behavior, which comes with additional cost for the playing agent \\
-	$D$ & strategy "Defect" & often used in standard literature to describe cooperative behavior, which comes without a cost for the playing agent \\[2em]
+	$D$ & strategy "Defect" & often used in standard literature to describe defective behavior, which comes without a cost for the playing agent, while ignoring costs for the other player\\[2em]
 	$T$ & temptation & Reward for defecting, when the other player is Cooperating\\
 	$R$ & reward for mutual \newline cooperation & reward in case both players are cooperating\\
 	$S$ & suckers payoff & reward for the player who cooperated against a player who defected him\\
