updated for SS 2019

--- a/equations.tex
+++ b/equations.tex
@@ -1,12 +1,12 @@
 \documentclass[a4paper,12pt]{scrartcl}
 
-\usepackage{cheatsheet}
+\usepackage{quickreference}
 \usepackage{tikzconfig}
 
 
 \newtheorem{definition}{Definition}
 
-\title{Computational Intelligence in Games\\ - Cheat Sheet -}
+\title{Computational Intelligence in Games\\ - Quick Reference -}
 \author{Alexander Dockhorn}
 
 
