--- a/quickreference.sty
+++ b/quickreference.sty
@@ -16,17 +16,17 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
-\fancyhead[L]{\textbf{Computational Intelligence in Games}\\Sanaz Mostaghim, Alexander Dockhorn, Dominik Weikert} %Kopfzeile links
+\fancyhead[L]{\textbf{Computational Intelligence in Games}\\Sanaz Mostaghim, Alexander Dockhorn, Christian Wustrau} %Kopfzeile links
 \fancyhead[C]{} %zentrierte Kopfzeile
-\fancyhead[R]{Summer 2018\\} %Kopfzeile rechts
+\fancyhead[R]{Summer 2019\\} %Kopfzeile rechts
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \setlength{\headheight}{28pt}
 
 \fancypagestyle{plain}{%
-\fancyhead[L]{\textbf{Computational Intelligence in Games}\\Sanaz Mostaghim, Alexander Dockhorn, Dominik Weikert} %Kopfzeile links
+\fancyhead[L]{\textbf{Computational Intelligence in Games}\\Sanaz Mostaghim, Alexander Dockhorn, Christian Wustrau} %Kopfzeile links
 \fancyhead[C]{} %zentrierte Kopfzeile
-\fancyhead[R]{Summer 2018\\} %Kopfzeile rechts
+\fancyhead[R]{Summer 2019\\} %Kopfzeile rechts
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \setlength{\headheight}{28pt}
@@ -57,9 +57,9 @@
 %references to equations and algorithms
 \usepackage{hyperref}
 \hypersetup{
-	pdftitle={Computational Intelligence in Games - Cheat Sheet},
-	pdfsubject={Informatik"ubung},
-	pdfauthor={Sanaz Mostaghim, Alexander Dockhorn, Dominik Weikert},
+	pdftitle={Computational Intelligence in Games - Quick Reference},
+	pdfsubject={Quick Reference},
+	pdfauthor={Sanaz Mostaghim, Alexander Dockhorn, Christian Wustrau},
 	colorlinks=false
 }
 
