updated open todos

--- a/equations.tex
+++ b/equations.tex
@@ -188,7 +188,7 @@ In case you have any ideas how to improve this guide please let us know by writi
 	\end{equation}
 \end{equationfloat}
 
-\todo[inline]{There seems to be something wrong with our current definition of replicator equations for finite populations. Please ignore this part for now! We will update the slides and this overview after a careful revision of this part.}
+\newpage
 
 \subsection{Additional Information on Evolutionary Game Theory}
 
