--- a/quickreference.sty
+++ b/quickreference.sty
@@ -45,8 +45,8 @@
 \usepackage{blkarray}
 
 %defining the pagebreak behavior
-\usepackage{titlesec}
-\newcommand{\sectionbreak}{\pagebreak[3]}
+%\usepackage{titlesec}
+%\newcommand{\sectionbreak}{\pagebreak[3]}
 
 \newenvironment{absolutelynopagebreak}
 {\par\nobreak\vfil\penalty0\vfilneg
